WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256620
Charts on sixcolors.com flicker when zooming in
https://bugs.webkit.org/show_bug.cgi?id=256620
Summary
Charts on sixcolors.com flicker when zooming in
Said Abou-Hallawa
Reported
2023-05-10 16:42:23 PDT
Load sixcolors.com on iPad and zoom in and out. The charts flicker as you do so. The flickering images have the attribute decoding="async". This attribute should be ignored if the image is in the current viewport.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-05-10 16:42:46 PDT
rdar://108930635
Said Abou-Hallawa
Comment 2
2023-05-10 18:18:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13732
EWS
Comment 3
2023-05-23 12:37:53 PDT
Committed
264433@main
(36adb36a799f): <
https://commits.webkit.org/264433@main
> Reviewed commits have been landed. Closing PR #13732 and removing active labels.
Said Abou-Hallawa
Comment 4
2023-06-14 16:11:06 PDT
Reopen. The change was reverted in
265169@main
because it caused a perf regression.
Said Abou-Hallawa
Comment 5
2023-06-15 13:37:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15017
EWS
Comment 6
2023-06-20 11:16:59 PDT
Committed
265328@main
(8f042c727b90): <
https://commits.webkit.org/265328@main
> Reviewed commits have been landed. Closing PR #15017 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug