Charts on sixcolors.com flicker when zooming in https://bugs.webkit.org/show_bug.cgi?id=256620 rdar://108930635

Reviewed by Simon Fraser.

If
	1. An image is in the current viewport,
	2. It has the attribute decoding="async",
	3. The layer has already painted at least once,
	4. And the image frame is being re-decoded

Then the decoding="async" attribute should be ignored to avoid flickering.

RenderBoxModelObject::decodingModeForImageDraw() is re-factored such that caces
which return DecodingMode::Synchronous are checked first. Then flickering case
is checked. Then cases which return DecodingMode::Asynchronous are checked last.

Two layout tests are changed to ensure the image is displayed on a fresh layer
when the image has the decoding="async".

* LayoutTests/fast/images/decode-decoding-change-image-src-expected.html: Added.
* LayoutTests/fast/images/decode-decoding-change-image-src.html: Added.
* Source/WebCore/rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::decodingModeForImageDraw const):

Canonical link: https://commits.webkit.org/264433@main